// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse AttributeList edge 1`] = `
Object {
  "body": Array [
    Object {
      "key": Object {
        "location": Object {
          "end": Object {
            "column": 16,
            "line": 3,
            "offset": 31,
          },
          "source": undefined,
          "start": Object {
            "column": 11,
            "line": 3,
            "offset": 26,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "color",
      },
      "location": Object {
        "end": Object {
          "column": 21,
          "line": 3,
          "offset": 36,
        },
        "source": undefined,
        "start": Object {
          "column": 11,
          "line": 3,
          "offset": 26,
        },
      },
      "type": "Attribute",
      "value": Object {
        "location": Object {
          "end": Object {
            "column": 20,
            "line": 3,
            "offset": 35,
          },
          "source": undefined,
          "start": Object {
            "column": 17,
            "line": 3,
            "offset": 32,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "red",
      },
    },
    Object {
      "key": Object {
        "location": Object {
          "end": Object {
            "column": 16,
            "line": 4,
            "offset": 52,
          },
          "source": undefined,
          "start": Object {
            "column": 11,
            "line": 4,
            "offset": 47,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "label",
      },
      "location": Object {
        "end": Object {
          "column": 37,
          "line": 4,
          "offset": 73,
        },
        "source": undefined,
        "start": Object {
          "column": 11,
          "line": 4,
          "offset": 47,
        },
      },
      "type": "Attribute",
      "value": Object {
        "location": Object {
          "end": Object {
            "column": 36,
            "line": 4,
            "offset": 72,
          },
          "source": undefined,
          "start": Object {
            "column": 19,
            "line": 4,
            "offset": 55,
          },
        },
        "quoted": true,
        "type": "Literal",
        "value": "example example",
      },
    },
  ],
  "kind": "edge",
  "location": Object {
    "end": Object {
      "column": 11,
      "line": 5,
      "offset": 84,
    },
    "source": undefined,
    "start": Object {
      "column": 9,
      "line": 2,
      "offset": 9,
    },
  },
  "type": "AttributeList",
}
`;

exports[`parse AttributeList graph 1`] = `
Object {
  "body": Array [
    Object {
      "key": Object {
        "location": Object {
          "end": Object {
            "column": 18,
            "line": 1,
            "offset": 17,
          },
          "source": undefined,
          "start": Object {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "fillcolor",
      },
      "location": Object {
        "end": Object {
          "column": 23,
          "line": 1,
          "offset": 22,
        },
        "source": undefined,
        "start": Object {
          "column": 9,
          "line": 1,
          "offset": 8,
        },
      },
      "type": "Attribute",
      "value": Object {
        "location": Object {
          "end": Object {
            "column": 22,
            "line": 1,
            "offset": 21,
          },
          "source": undefined,
          "start": Object {
            "column": 19,
            "line": 1,
            "offset": 18,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "red",
      },
    },
    Object {
      "key": Object {
        "location": Object {
          "end": Object {
            "column": 29,
            "line": 1,
            "offset": 28,
          },
          "source": undefined,
          "start": Object {
            "column": 24,
            "line": 1,
            "offset": 23,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "label",
      },
      "location": Object {
        "end": Object {
          "column": 49,
          "line": 1,
          "offset": 48,
        },
        "source": undefined,
        "start": Object {
          "column": 24,
          "line": 1,
          "offset": 23,
        },
      },
      "type": "Attribute",
      "value": Object {
        "location": Object {
          "end": Object {
            "column": 49,
            "line": 1,
            "offset": 48,
          },
          "source": undefined,
          "start": Object {
            "column": 32,
            "line": 1,
            "offset": 31,
          },
        },
        "quoted": true,
        "type": "Literal",
        "value": "example example",
      },
    },
  ],
  "kind": "graph",
  "location": Object {
    "end": Object {
      "column": 51,
      "line": 1,
      "offset": 50,
    },
    "source": undefined,
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "AttributeList",
}
`;

exports[`parse AttributeList node 1`] = `
Object {
  "body": Array [
    Object {
      "key": Object {
        "location": Object {
          "end": Object {
            "column": 16,
            "line": 3,
            "offset": 31,
          },
          "source": undefined,
          "start": Object {
            "column": 11,
            "line": 3,
            "offset": 26,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "style",
      },
      "location": Object {
        "end": Object {
          "column": 24,
          "line": 3,
          "offset": 39,
        },
        "source": undefined,
        "start": Object {
          "column": 11,
          "line": 3,
          "offset": 26,
        },
      },
      "type": "Attribute",
      "value": Object {
        "location": Object {
          "end": Object {
            "column": 23,
            "line": 3,
            "offset": 38,
          },
          "source": undefined,
          "start": Object {
            "column": 17,
            "line": 3,
            "offset": 32,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "filled",
      },
    },
    Object {
      "key": Object {
        "location": Object {
          "end": Object {
            "column": 16,
            "line": 4,
            "offset": 55,
          },
          "source": undefined,
          "start": Object {
            "column": 11,
            "line": 4,
            "offset": 50,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "color",
      },
      "location": Object {
        "end": Object {
          "column": 27,
          "line": 4,
          "offset": 66,
        },
        "source": undefined,
        "start": Object {
          "column": 11,
          "line": 4,
          "offset": 50,
        },
      },
      "type": "Attribute",
      "value": Object {
        "location": Object {
          "end": Object {
            "column": 26,
            "line": 4,
            "offset": 65,
          },
          "source": undefined,
          "start": Object {
            "column": 17,
            "line": 4,
            "offset": 56,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "lightgrey",
      },
    },
    Object {
      "key": Object {
        "location": Object {
          "end": Object {
            "column": 16,
            "line": 5,
            "offset": 82,
          },
          "source": undefined,
          "start": Object {
            "column": 11,
            "line": 5,
            "offset": 77,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "label",
      },
      "location": Object {
        "end": Object {
          "column": 32,
          "line": 5,
          "offset": 98,
        },
        "source": undefined,
        "start": Object {
          "column": 11,
          "line": 5,
          "offset": 77,
        },
      },
      "type": "Attribute",
      "value": Object {
        "location": Object {
          "end": Object {
            "column": 31,
            "line": 5,
            "offset": 97,
          },
          "source": undefined,
          "start": Object {
            "column": 19,
            "line": 5,
            "offset": 85,
          },
        },
        "quoted": true,
        "type": "Literal",
        "value": "example #1",
      },
    },
  ],
  "kind": "node",
  "location": Object {
    "end": Object {
      "column": 10,
      "line": 6,
      "offset": 108,
    },
    "source": undefined,
    "start": Object {
      "column": 9,
      "line": 2,
      "offset": 9,
    },
  },
  "type": "AttributeList",
}
`;

exports[`parse AttributeList with comment 1`] = `
Object {
  "body": Array [
    Object {
      "kind": "Macro",
      "location": Object {
        "end": Object {
          "column": 1,
          "line": 4,
          "offset": 39,
        },
        "source": undefined,
        "start": Object {
          "column": 12,
          "line": 3,
          "offset": 27,
        },
      },
      "type": "Comment",
      "value": "comment 1",
    },
    Object {
      "key": Object {
        "location": Object {
          "end": Object {
            "column": 16,
            "line": 4,
            "offset": 54,
          },
          "source": undefined,
          "start": Object {
            "column": 11,
            "line": 4,
            "offset": 49,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "style",
      },
      "location": Object {
        "end": Object {
          "column": 24,
          "line": 4,
          "offset": 62,
        },
        "source": undefined,
        "start": Object {
          "column": 11,
          "line": 4,
          "offset": 49,
        },
      },
      "type": "Attribute",
      "value": Object {
        "location": Object {
          "end": Object {
            "column": 23,
            "line": 4,
            "offset": 61,
          },
          "source": undefined,
          "start": Object {
            "column": 17,
            "line": 4,
            "offset": 55,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "filled",
      },
    },
  ],
  "kind": "node",
  "location": Object {
    "end": Object {
      "column": 10,
      "line": 5,
      "offset": 72,
    },
    "source": undefined,
    "start": Object {
      "column": 9,
      "line": 2,
      "offset": 9,
    },
  },
  "type": "AttributeList",
}
`;

exports[`parse attribute set HTMLLike value 1`] = `
Object {
  "key": Object {
    "location": Object {
      "end": Object {
        "column": 14,
        "line": 2,
        "offset": 14,
      },
      "source": undefined,
      "start": Object {
        "column": 9,
        "line": 2,
        "offset": 9,
      },
    },
    "quoted": false,
    "type": "Literal",
    "value": "label",
  },
  "location": Object {
    "end": Object {
      "column": 10,
      "line": 10,
      "offset": 601,
    },
    "source": undefined,
    "start": Object {
      "column": 9,
      "line": 2,
      "offset": 9,
    },
  },
  "type": "Attribute",
  "value": Object {
    "location": Object {
      "end": Object {
        "column": 10,
        "line": 10,
        "offset": 601,
      },
      "source": undefined,
      "start": Object {
        "column": 17,
        "line": 2,
        "offset": 17,
      },
    },
    "quoted": "html",
    "type": "Literal",
    "value": "
          <table border=\\"0\\">
            <tr><td align=\\"text\\">By default, td text is center-aligned</td></tr>
            <tr><td align=\\"text\\">This td is left aligned<br align=\\"left\\" /></td></tr>
            <tr><td align=\\"text\\">this one centered<br align=\\"center\\" /></td></tr>
            <tr><td align=\\"text\\">and this one right aligned<br align=\\"right\\" /><br align=\\"right\\"/></td></tr>
            <tr><td align=\\"text\\">The value of a closing<br align=\\"left\\"/>&lt;br/&gt; tag<br align=\\"center\\"/>refers to the preceeding text<br align=\\"right\\"/></td></tr>
          </table>
        ",
  },
}
`;

exports[`parse attribute set quoted value 1`] = `
Object {
  "key": Object {
    "location": Object {
      "end": Object {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "source": undefined,
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "quoted": false,
    "type": "Literal",
    "value": "label",
  },
  "location": Object {
    "end": Object {
      "column": 22,
      "line": 1,
      "offset": 21,
    },
    "source": undefined,
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "Attribute",
  "value": Object {
    "location": Object {
      "end": Object {
        "column": 21,
        "line": 1,
        "offset": 20,
      },
      "source": undefined,
      "start": Object {
        "column": 9,
        "line": 1,
        "offset": 8,
      },
    },
    "quoted": true,
    "type": "Literal",
    "value": "example #1",
  },
}
`;

exports[`parse attribute set value 1`] = `
Object {
  "key": Object {
    "location": Object {
      "end": Object {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "source": undefined,
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "quoted": false,
    "type": "Literal",
    "value": "style",
  },
  "location": Object {
    "end": Object {
      "column": 14,
      "line": 1,
      "offset": 13,
    },
    "source": undefined,
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "Attribute",
  "value": Object {
    "location": Object {
      "end": Object {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "source": undefined,
      "start": Object {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
    },
    "quoted": false,
    "type": "Literal",
    "value": "filled",
  },
}
`;

exports[`parse cluster_statements comments 1`] = `
Array [
  Object {
    "kind": "Slash",
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 3,
        "offset": 21,
      },
      "source": undefined,
      "start": Object {
        "column": 9,
        "line": 2,
        "offset": 9,
      },
    },
    "type": "Comment",
    "value": "comment1",
  },
  Object {
    "kind": "Slash",
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 6,
        "offset": 62,
      },
      "source": undefined,
      "start": Object {
        "column": 9,
        "line": 4,
        "offset": 30,
      },
    },
    "type": "Comment",
    "value": "comment2
comment2",
  },
  Object {
    "kind": "Macro",
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 8,
        "offset": 82,
      },
      "source": undefined,
      "start": Object {
        "column": 9,
        "line": 7,
        "offset": 71,
      },
    },
    "type": "Comment",
    "value": "comment3",
  },
  Object {
    "kind": "Macro",
    "location": Object {
      "end": Object {
        "column": 1,
        "line": 11,
        "offset": 121,
      },
      "source": undefined,
      "start": Object {
        "column": 9,
        "line": 9,
        "offset": 91,
      },
    },
    "type": "Comment",
    "value": "comment4
comment4",
  },
  Object {
    "kind": "Block",
    "location": Object {
      "end": Object {
        "column": 24,
        "line": 11,
        "offset": 144,
      },
      "source": undefined,
      "start": Object {
        "column": 9,
        "line": 11,
        "offset": 129,
      },
    },
    "type": "Comment",
    "value": "comment 5",
  },
]
`;

exports[`parse dot with comments 1`] = `
Object {
  "body": Array [
    Object {
      "kind": "Block",
      "location": Object {
        "end": Object {
          "column": 24,
          "line": 2,
          "offset": 24,
        },
        "source": undefined,
        "start": Object {
          "column": 9,
          "line": 2,
          "offset": 9,
        },
      },
      "type": "Comment",
      "value": "comment1",
    },
    Object {
      "body": Array [],
      "directed": true,
      "id": undefined,
      "location": Object {
        "end": Object {
          "column": 19,
          "line": 3,
          "offset": 43,
        },
        "source": undefined,
        "start": Object {
          "column": 9,
          "line": 3,
          "offset": 33,
        },
      },
      "strict": false,
      "type": "Graph",
    },
    Object {
      "kind": "Block",
      "location": Object {
        "end": Object {
          "column": 24,
          "line": 4,
          "offset": 67,
        },
        "source": undefined,
        "start": Object {
          "column": 9,
          "line": 4,
          "offset": 52,
        },
      },
      "type": "Comment",
      "value": "comment2",
    },
  ],
  "location": Object {
    "end": Object {
      "column": 9,
      "line": 5,
      "offset": 76,
    },
    "source": undefined,
    "start": Object {
      "column": 9,
      "line": 2,
      "offset": 9,
    },
  },
  "type": "Dot",
}
`;

exports[`parse edge digraph edge 1`] = `
Object {
  "body": Array [],
  "location": Object {
    "end": Object {
      "column": 8,
      "line": 1,
      "offset": 7,
    },
    "source": undefined,
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "targets": Array [
    Object {
      "compass": undefined,
      "id": Object {
        "location": Object {
          "end": Object {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
          "source": undefined,
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "a",
      },
      "location": Object {
        "end": Object {
          "column": 2,
          "line": 1,
          "offset": 1,
        },
        "source": undefined,
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "port": undefined,
      "type": "NodeRef",
    },
    Object {
      "compass": undefined,
      "id": Object {
        "location": Object {
          "end": Object {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
          "source": undefined,
          "start": Object {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "b",
      },
      "location": Object {
        "end": Object {
          "column": 7,
          "line": 1,
          "offset": 6,
        },
        "source": undefined,
        "start": Object {
          "column": 6,
          "line": 1,
          "offset": 5,
        },
      },
      "port": undefined,
      "type": "NodeRef",
    },
  ],
  "type": "Edge",
}
`;

exports[`parse edge edge with attributes 1`] = `
Object {
  "body": Array [
    Object {
      "key": Object {
        "location": Object {
          "end": Object {
            "column": 18,
            "line": 3,
            "offset": 37,
          },
          "source": undefined,
          "start": Object {
            "column": 13,
            "line": 3,
            "offset": 32,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "color",
      },
      "location": Object {
        "end": Object {
          "column": 29,
          "line": 3,
          "offset": 48,
        },
        "source": undefined,
        "start": Object {
          "column": 13,
          "line": 3,
          "offset": 32,
        },
      },
      "type": "Attribute",
      "value": Object {
        "location": Object {
          "end": Object {
            "column": 28,
            "line": 3,
            "offset": 47,
          },
          "source": undefined,
          "start": Object {
            "column": 19,
            "line": 3,
            "offset": 38,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "lightgrey",
      },
    },
    Object {
      "key": Object {
        "location": Object {
          "end": Object {
            "column": 18,
            "line": 4,
            "offset": 66,
          },
          "source": undefined,
          "start": Object {
            "column": 13,
            "line": 4,
            "offset": 61,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "label",
      },
      "location": Object {
        "end": Object {
          "column": 34,
          "line": 4,
          "offset": 82,
        },
        "source": undefined,
        "start": Object {
          "column": 13,
          "line": 4,
          "offset": 61,
        },
      },
      "type": "Attribute",
      "value": Object {
        "location": Object {
          "end": Object {
            "column": 33,
            "line": 4,
            "offset": 81,
          },
          "source": undefined,
          "start": Object {
            "column": 21,
            "line": 4,
            "offset": 69,
          },
        },
        "quoted": true,
        "type": "Literal",
        "value": "example #1",
      },
    },
  ],
  "location": Object {
    "end": Object {
      "column": 13,
      "line": 5,
      "offset": 95,
    },
    "source": undefined,
    "start": Object {
      "column": 11,
      "line": 2,
      "offset": 11,
    },
  },
  "targets": Array [
    Object {
      "compass": undefined,
      "id": Object {
        "location": Object {
          "end": Object {
            "column": 12,
            "line": 2,
            "offset": 12,
          },
          "source": undefined,
          "start": Object {
            "column": 11,
            "line": 2,
            "offset": 11,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "a",
      },
      "location": Object {
        "end": Object {
          "column": 12,
          "line": 2,
          "offset": 12,
        },
        "source": undefined,
        "start": Object {
          "column": 11,
          "line": 2,
          "offset": 11,
        },
      },
      "port": undefined,
      "type": "NodeRef",
    },
    Object {
      "compass": undefined,
      "id": Object {
        "location": Object {
          "end": Object {
            "column": 17,
            "line": 2,
            "offset": 17,
          },
          "source": undefined,
          "start": Object {
            "column": 16,
            "line": 2,
            "offset": 16,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "b",
      },
      "location": Object {
        "end": Object {
          "column": 17,
          "line": 2,
          "offset": 17,
        },
        "source": undefined,
        "start": Object {
          "column": 16,
          "line": 2,
          "offset": 16,
        },
      },
      "port": undefined,
      "type": "NodeRef",
    },
  ],
  "type": "Edge",
}
`;

exports[`parse edge edge with port 1`] = `
Object {
  "body": Array [],
  "location": Object {
    "end": Object {
      "column": 31,
      "line": 1,
      "offset": 30,
    },
    "source": undefined,
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "targets": Array [
    Object {
      "compass": undefined,
      "id": Object {
        "location": Object {
          "end": Object {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
          "source": undefined,
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "a",
      },
      "location": Object {
        "end": Object {
          "column": 5,
          "line": 1,
          "offset": 4,
        },
        "source": undefined,
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "port": Object {
        "location": Object {
          "end": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "source": undefined,
          "start": Object {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "p1",
      },
      "type": "NodeRef",
    },
    Object {
      "compass": undefined,
      "id": Object {
        "location": Object {
          "end": Object {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "source": undefined,
          "start": Object {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "b",
      },
      "location": Object {
        "end": Object {
          "column": 13,
          "line": 1,
          "offset": 12,
        },
        "source": undefined,
        "start": Object {
          "column": 9,
          "line": 1,
          "offset": 8,
        },
      },
      "port": Object {
        "location": Object {
          "end": Object {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "source": undefined,
          "start": Object {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "p2",
      },
      "type": "NodeRef",
    },
    Object {
      "compass": Object {
        "location": Object {
          "end": Object {
            "column": 23,
            "line": 1,
            "offset": 22,
          },
          "source": undefined,
          "start": Object {
            "column": 22,
            "line": 1,
            "offset": 21,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "w",
      },
      "id": Object {
        "location": Object {
          "end": Object {
            "column": 18,
            "line": 1,
            "offset": 17,
          },
          "source": undefined,
          "start": Object {
            "column": 17,
            "line": 1,
            "offset": 16,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "c",
      },
      "location": Object {
        "end": Object {
          "column": 23,
          "line": 1,
          "offset": 22,
        },
        "source": undefined,
        "start": Object {
          "column": 17,
          "line": 1,
          "offset": 16,
        },
      },
      "port": Object {
        "location": Object {
          "end": Object {
            "column": 21,
            "line": 1,
            "offset": 20,
          },
          "source": undefined,
          "start": Object {
            "column": 19,
            "line": 1,
            "offset": 18,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "p3",
      },
      "type": "NodeRef",
    },
    Object {
      "compass": undefined,
      "id": Object {
        "location": Object {
          "end": Object {
            "column": 28,
            "line": 1,
            "offset": 27,
          },
          "source": undefined,
          "start": Object {
            "column": 27,
            "line": 1,
            "offset": 26,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "d",
      },
      "location": Object {
        "end": Object {
          "column": 30,
          "line": 1,
          "offset": 29,
        },
        "source": undefined,
        "start": Object {
          "column": 27,
          "line": 1,
          "offset": 26,
        },
      },
      "port": Object {
        "location": Object {
          "end": Object {
            "column": 30,
            "line": 1,
            "offset": 29,
          },
          "source": undefined,
          "start": Object {
            "column": 29,
            "line": 1,
            "offset": 28,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "w",
      },
      "type": "NodeRef",
    },
  ],
  "type": "Edge",
}
`;

exports[`parse edge graph edge 1`] = `
Object {
  "body": Array [],
  "location": Object {
    "end": Object {
      "column": 8,
      "line": 1,
      "offset": 7,
    },
    "source": undefined,
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "targets": Array [
    Object {
      "compass": undefined,
      "id": Object {
        "location": Object {
          "end": Object {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
          "source": undefined,
          "start": Object {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "a",
      },
      "location": Object {
        "end": Object {
          "column": 2,
          "line": 1,
          "offset": 1,
        },
        "source": undefined,
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "port": undefined,
      "type": "NodeRef",
    },
    Object {
      "compass": undefined,
      "id": Object {
        "location": Object {
          "end": Object {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
          "source": undefined,
          "start": Object {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "b",
      },
      "location": Object {
        "end": Object {
          "column": 7,
          "line": 1,
          "offset": 6,
        },
        "source": undefined,
        "start": Object {
          "column": 6,
          "line": 1,
          "offset": 5,
        },
      },
      "port": undefined,
      "type": "NodeRef",
    },
  ],
  "type": "Edge",
}
`;

exports[`parse edge grouped edge targets 1`] = `
Object {
  "body": Array [],
  "location": Object {
    "end": Object {
      "column": 22,
      "line": 1,
      "offset": 21,
    },
    "source": undefined,
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "targets": Array [
    Object {
      "body": Array [
        Object {
          "compass": undefined,
          "id": Object {
            "location": Object {
              "end": Object {
                "column": 4,
                "line": 1,
                "offset": 3,
              },
              "source": undefined,
              "start": Object {
                "column": 2,
                "line": 1,
                "offset": 1,
              },
            },
            "quoted": false,
            "type": "Literal",
            "value": "a1",
          },
          "location": Object {
            "end": Object {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "source": undefined,
            "start": Object {
              "column": 2,
              "line": 1,
              "offset": 1,
            },
          },
          "port": undefined,
          "type": "NodeRef",
        },
        Object {
          "compass": undefined,
          "id": Object {
            "location": Object {
              "end": Object {
                "column": 8,
                "line": 1,
                "offset": 7,
              },
              "source": undefined,
              "start": Object {
                "column": 6,
                "line": 1,
                "offset": 5,
              },
            },
            "quoted": false,
            "type": "Literal",
            "value": "a2",
          },
          "location": Object {
            "end": Object {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
            "source": undefined,
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "port": undefined,
          "type": "NodeRef",
        },
      ],
      "location": Object {
        "end": Object {
          "column": 9,
          "line": 1,
          "offset": 8,
        },
        "source": undefined,
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "NodeRefGroup",
    },
    Object {
      "body": Array [
        Object {
          "compass": undefined,
          "id": Object {
            "location": Object {
              "end": Object {
                "column": 16,
                "line": 1,
                "offset": 15,
              },
              "source": undefined,
              "start": Object {
                "column": 14,
                "line": 1,
                "offset": 13,
              },
            },
            "quoted": false,
            "type": "Literal",
            "value": "b1",
          },
          "location": Object {
            "end": Object {
              "column": 16,
              "line": 1,
              "offset": 15,
            },
            "source": undefined,
            "start": Object {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
          },
          "port": undefined,
          "type": "NodeRef",
        },
        Object {
          "compass": undefined,
          "id": Object {
            "location": Object {
              "end": Object {
                "column": 20,
                "line": 1,
                "offset": 19,
              },
              "source": undefined,
              "start": Object {
                "column": 18,
                "line": 1,
                "offset": 17,
              },
            },
            "quoted": false,
            "type": "Literal",
            "value": "b2",
          },
          "location": Object {
            "end": Object {
              "column": 20,
              "line": 1,
              "offset": 19,
            },
            "source": undefined,
            "start": Object {
              "column": 18,
              "line": 1,
              "offset": 17,
            },
          },
          "port": undefined,
          "type": "NodeRef",
        },
      ],
      "location": Object {
        "end": Object {
          "column": 21,
          "line": 1,
          "offset": 20,
        },
        "source": undefined,
        "start": Object {
          "column": 13,
          "line": 1,
          "offset": 12,
        },
      },
      "type": "NodeRefGroup",
    },
  ],
  "type": "Edge",
}
`;

exports[`parse edge grouped ported edge targets 1`] = `
Object {
  "body": Array [],
  "location": Object {
    "end": Object {
      "column": 35,
      "line": 1,
      "offset": 34,
    },
    "source": undefined,
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "targets": Array [
    Object {
      "body": Array [
        Object {
          "compass": undefined,
          "id": Object {
            "location": Object {
              "end": Object {
                "column": 4,
                "line": 1,
                "offset": 3,
              },
              "source": undefined,
              "start": Object {
                "column": 2,
                "line": 1,
                "offset": 1,
              },
            },
            "quoted": false,
            "type": "Literal",
            "value": "a1",
          },
          "location": Object {
            "end": Object {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
            "source": undefined,
            "start": Object {
              "column": 2,
              "line": 1,
              "offset": 1,
            },
          },
          "port": Object {
            "location": Object {
              "end": Object {
                "column": 7,
                "line": 1,
                "offset": 6,
              },
              "source": undefined,
              "start": Object {
                "column": 5,
                "line": 1,
                "offset": 4,
              },
            },
            "quoted": false,
            "type": "Literal",
            "value": "p1",
          },
          "type": "NodeRef",
        },
        Object {
          "compass": Object {
            "location": Object {
              "end": Object {
                "column": 16,
                "line": 1,
                "offset": 15,
              },
              "source": undefined,
              "start": Object {
                "column": 15,
                "line": 1,
                "offset": 14,
              },
            },
            "quoted": false,
            "type": "Literal",
            "value": "w",
          },
          "id": Object {
            "location": Object {
              "end": Object {
                "column": 11,
                "line": 1,
                "offset": 10,
              },
              "source": undefined,
              "start": Object {
                "column": 9,
                "line": 1,
                "offset": 8,
              },
            },
            "quoted": false,
            "type": "Literal",
            "value": "a2",
          },
          "location": Object {
            "end": Object {
              "column": 16,
              "line": 1,
              "offset": 15,
            },
            "source": undefined,
            "start": Object {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
          },
          "port": Object {
            "location": Object {
              "end": Object {
                "column": 14,
                "line": 1,
                "offset": 13,
              },
              "source": undefined,
              "start": Object {
                "column": 12,
                "line": 1,
                "offset": 11,
              },
            },
            "quoted": false,
            "type": "Literal",
            "value": "p2",
          },
          "type": "NodeRef",
        },
      ],
      "location": Object {
        "end": Object {
          "column": 17,
          "line": 1,
          "offset": 16,
        },
        "source": undefined,
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "NodeRefGroup",
    },
    Object {
      "body": Array [
        Object {
          "compass": undefined,
          "id": Object {
            "location": Object {
              "end": Object {
                "column": 24,
                "line": 1,
                "offset": 23,
              },
              "source": undefined,
              "start": Object {
                "column": 22,
                "line": 1,
                "offset": 21,
              },
            },
            "quoted": false,
            "type": "Literal",
            "value": "b1",
          },
          "location": Object {
            "end": Object {
              "column": 26,
              "line": 1,
              "offset": 25,
            },
            "source": undefined,
            "start": Object {
              "column": 22,
              "line": 1,
              "offset": 21,
            },
          },
          "port": Object {
            "location": Object {
              "end": Object {
                "column": 26,
                "line": 1,
                "offset": 25,
              },
              "source": undefined,
              "start": Object {
                "column": 25,
                "line": 1,
                "offset": 24,
              },
            },
            "quoted": false,
            "type": "Literal",
            "value": "e",
          },
          "type": "NodeRef",
        },
        Object {
          "compass": undefined,
          "id": Object {
            "location": Object {
              "end": Object {
                "column": 30,
                "line": 1,
                "offset": 29,
              },
              "source": undefined,
              "start": Object {
                "column": 28,
                "line": 1,
                "offset": 27,
              },
            },
            "quoted": false,
            "type": "Literal",
            "value": "b2",
          },
          "location": Object {
            "end": Object {
              "column": 33,
              "line": 1,
              "offset": 32,
            },
            "source": undefined,
            "start": Object {
              "column": 28,
              "line": 1,
              "offset": 27,
            },
          },
          "port": Object {
            "location": Object {
              "end": Object {
                "column": 33,
                "line": 1,
                "offset": 32,
              },
              "source": undefined,
              "start": Object {
                "column": 31,
                "line": 1,
                "offset": 30,
              },
            },
            "quoted": false,
            "type": "Literal",
            "value": "p3",
          },
          "type": "NodeRef",
        },
      ],
      "location": Object {
        "end": Object {
          "column": 34,
          "line": 1,
          "offset": 33,
        },
        "source": undefined,
        "start": Object {
          "column": 21,
          "line": 1,
          "offset": 20,
        },
      },
      "type": "NodeRefGroup",
    },
  ],
  "type": "Edge",
}
`;

exports[`parse graph anonymous digraph 1`] = `
Object {
  "body": Array [],
  "directed": true,
  "id": undefined,
  "location": Object {
    "end": Object {
      "column": 11,
      "line": 1,
      "offset": 10,
    },
    "source": undefined,
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "strict": false,
  "type": "Graph",
}
`;

exports[`parse graph digraph named test 1`] = `
Object {
  "body": Array [],
  "directed": true,
  "id": Object {
    "location": Object {
      "end": Object {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "source": undefined,
      "start": Object {
        "column": 9,
        "line": 1,
        "offset": 8,
      },
    },
    "quoted": false,
    "type": "Literal",
    "value": "test",
  },
  "location": Object {
    "end": Object {
      "column": 16,
      "line": 1,
      "offset": 15,
    },
    "source": undefined,
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "strict": false,
  "type": "Graph",
}
`;

exports[`parse graph digraph named test(quoted) 1`] = `
Object {
  "body": Array [],
  "directed": true,
  "id": Object {
    "location": Object {
      "end": Object {
        "column": 15,
        "line": 1,
        "offset": 14,
      },
      "source": undefined,
      "start": Object {
        "column": 9,
        "line": 1,
        "offset": 8,
      },
    },
    "quoted": true,
    "type": "Literal",
    "value": "test",
  },
  "location": Object {
    "end": Object {
      "column": 18,
      "line": 1,
      "offset": 17,
    },
    "source": undefined,
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "strict": false,
  "type": "Graph",
}
`;

exports[`parse graph graph named test 1`] = `
Object {
  "body": Array [],
  "directed": false,
  "id": Object {
    "location": Object {
      "end": Object {
        "column": 11,
        "line": 1,
        "offset": 10,
      },
      "source": undefined,
      "start": Object {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
    },
    "quoted": false,
    "type": "Literal",
    "value": "test",
  },
  "location": Object {
    "end": Object {
      "column": 14,
      "line": 1,
      "offset": 13,
    },
    "source": undefined,
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "strict": false,
  "type": "Graph",
}
`;

exports[`parse graph strict digraph named test 1`] = `
Object {
  "body": Array [],
  "directed": true,
  "id": Object {
    "location": Object {
      "end": Object {
        "column": 20,
        "line": 1,
        "offset": 19,
      },
      "source": undefined,
      "start": Object {
        "column": 16,
        "line": 1,
        "offset": 15,
      },
    },
    "quoted": false,
    "type": "Literal",
    "value": "test",
  },
  "location": Object {
    "end": Object {
      "column": 23,
      "line": 1,
      "offset": 22,
    },
    "source": undefined,
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "strict": true,
  "type": "Graph",
}
`;

exports[`parse graph strict graph named test 1`] = `
Object {
  "body": Array [],
  "directed": false,
  "id": Object {
    "location": Object {
      "end": Object {
        "column": 18,
        "line": 1,
        "offset": 17,
      },
      "source": undefined,
      "start": Object {
        "column": 14,
        "line": 1,
        "offset": 13,
      },
    },
    "quoted": false,
    "type": "Literal",
    "value": "test",
  },
  "location": Object {
    "end": Object {
      "column": 21,
      "line": 1,
      "offset": 20,
    },
    "source": undefined,
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "strict": true,
  "type": "Graph",
}
`;

exports[`parse node node with attributes 1`] = `
Object {
  "body": Array [
    Object {
      "key": Object {
        "location": Object {
          "end": Object {
            "column": 18,
            "line": 3,
            "offset": 35,
          },
          "source": undefined,
          "start": Object {
            "column": 13,
            "line": 3,
            "offset": 30,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "style",
      },
      "location": Object {
        "end": Object {
          "column": 26,
          "line": 3,
          "offset": 43,
        },
        "source": undefined,
        "start": Object {
          "column": 13,
          "line": 3,
          "offset": 30,
        },
      },
      "type": "Attribute",
      "value": Object {
        "location": Object {
          "end": Object {
            "column": 25,
            "line": 3,
            "offset": 42,
          },
          "source": undefined,
          "start": Object {
            "column": 19,
            "line": 3,
            "offset": 36,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "filled",
      },
    },
    Object {
      "key": Object {
        "location": Object {
          "end": Object {
            "column": 18,
            "line": 4,
            "offset": 61,
          },
          "source": undefined,
          "start": Object {
            "column": 13,
            "line": 4,
            "offset": 56,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "color",
      },
      "location": Object {
        "end": Object {
          "column": 29,
          "line": 4,
          "offset": 72,
        },
        "source": undefined,
        "start": Object {
          "column": 13,
          "line": 4,
          "offset": 56,
        },
      },
      "type": "Attribute",
      "value": Object {
        "location": Object {
          "end": Object {
            "column": 28,
            "line": 4,
            "offset": 71,
          },
          "source": undefined,
          "start": Object {
            "column": 19,
            "line": 4,
            "offset": 62,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "lightgrey",
      },
    },
    Object {
      "key": Object {
        "location": Object {
          "end": Object {
            "column": 18,
            "line": 5,
            "offset": 90,
          },
          "source": undefined,
          "start": Object {
            "column": 13,
            "line": 5,
            "offset": 85,
          },
        },
        "quoted": false,
        "type": "Literal",
        "value": "label",
      },
      "location": Object {
        "end": Object {
          "column": 34,
          "line": 5,
          "offset": 106,
        },
        "source": undefined,
        "start": Object {
          "column": 13,
          "line": 5,
          "offset": 85,
        },
      },
      "type": "Attribute",
      "value": Object {
        "location": Object {
          "end": Object {
            "column": 33,
            "line": 5,
            "offset": 105,
          },
          "source": undefined,
          "start": Object {
            "column": 21,
            "line": 5,
            "offset": 93,
          },
        },
        "quoted": true,
        "type": "Literal",
        "value": "example #1",
      },
    },
  ],
  "id": Object {
    "location": Object {
      "end": Object {
        "column": 15,
        "line": 2,
        "offset": 15,
      },
      "source": undefined,
      "start": Object {
        "column": 11,
        "line": 2,
        "offset": 11,
      },
    },
    "quoted": false,
    "type": "Literal",
    "value": "test",
  },
  "location": Object {
    "end": Object {
      "column": 13,
      "line": 6,
      "offset": 119,
    },
    "source": undefined,
    "start": Object {
      "column": 11,
      "line": 2,
      "offset": 11,
    },
  },
  "type": "Node",
}
`;

exports[`parse node simple node 1`] = `
Object {
  "body": Array [],
  "id": Object {
    "location": Object {
      "end": Object {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "source": undefined,
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "quoted": false,
    "type": "Literal",
    "value": "test",
  },
  "location": Object {
    "end": Object {
      "column": 6,
      "line": 1,
      "offset": 5,
    },
    "source": undefined,
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "Node",
}
`;

exports[`parse subgraph anonymous subgraph 1`] = `
Object {
  "body": Array [],
  "id": undefined,
  "location": Object {
    "end": Object {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "source": undefined,
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "Subgraph",
}
`;

exports[`parse subgraph named subgraph 1`] = `
Object {
  "body": Array [],
  "id": Object {
    "location": Object {
      "end": Object {
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "source": undefined,
      "start": Object {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
    },
    "quoted": false,
    "type": "Literal",
    "value": "hoge",
  },
  "location": Object {
    "end": Object {
      "column": 17,
      "line": 1,
      "offset": 16,
    },
    "source": undefined,
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "Subgraph",
}
`;

exports[`parse subgraph no keyword anonymous 1`] = `
Object {
  "body": Array [],
  "id": undefined,
  "location": Object {
    "end": Object {
      "column": 3,
      "line": 1,
      "offset": 2,
    },
    "source": undefined,
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "Subgraph",
}
`;
